src/parser/snapshots/tests__parse_function_no_arg_call.snap
---
source: src/parser/mod.rs
expression: parsed
---
Node {
    ty: Program,
    text_range: 0..35,
    children: [
        Node {
            ty: Identifier,
            text_range: 8..11,
            children: [],
        },
        Node {
            ty: Compound,
            text_range: 12..35,
            children: [
                Node {
                    ty: Decl,
                    text_range: 18..31,
                    children: [
                        Node {
                            ty: Identifier,
                            text_range: 22..23,
                            children: [],
                        },
                        Node {
                            ty: Expr,
                            text_range: 27..30,
                            children: [
                                Node {
                                    ty: Term,
                                    text_range: 27..30,
                                    children: [
                                        Node {
                                            ty: Factor,
                                            text_range: 27..30,
                                            children: [
                                                Node {
                                                    ty: Product,
                                                    text_range: 27..30,
                                                    children: [
                                                        Node {
                                                            ty: Unit,
                                                            text_range: 27..30,
                                                            children: [
                                                                Node {
                                                                    ty: FunctionCall,
                                                                    text_range: 27..30,
                                                                    children: [],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
