src/parser/snapshots/tests__parse_function_single_arg.snap
---
source: src/parser/mod.rs
expression: parsed
---
Node {
    ty: Program,
    text_range: 0..73,
    children: [
        Node {
            ty: Identifier,
            text_range: 8..11,
            children: [],
        },
        Node {
            ty: Compound,
            text_range: 12..73,
            children: [
                Node {
                    ty: FunctionDecl,
                    text_range: 18..69,
                    children: [
                        Node {
                            ty: Type(
                                Boolean,
                            ),
                            text_range: 28..32,
                            children: [],
                        },
                        Node {
                            ty: Identifier,
                            text_range: 33..35,
                            children: [],
                        },
                        Node {
                            ty: FunctionDeclArgs,
                            text_range: 36..48,
                            children: [
                                Node {
                                    ty: Identifier,
                                    text_range: 40..41,
                                    children: [],
                                },
                                Node {
                                    ty: Type(
                                        Boolean,
                                    ),
                                    text_range: 44..48,
                                    children: [],
                                },
                            ],
                        },
                        Node {
                            ty: Compound,
                            text_range: 50..69,
                            children: [
                                Node {
                                    ty: Return,
                                    text_range: 56..65,
                                    children: [
                                        Node {
                                            ty: Expr,
                                            text_range: 63..64,
                                            children: [
                                                Node {
                                                    ty: Term,
                                                    text_range: 63..64,
                                                    children: [
                                                        Node {
                                                            ty: Factor,
                                                            text_range: 63..64,
                                                            children: [
                                                                Node {
                                                                    ty: Product,
                                                                    text_range: 63..64,
                                                                    children: [
                                                                        Node {
                                                                            ty: Unit,
                                                                            text_range: 63..64,
                                                                            children: [
                                                                                Node {
                                                                                    ty: Identifier,
                                                                                    text_range: 63..64,
                                                                                    children: [],
                                                                                },
                                                                            ],
                                                                        },
                                                                    ],
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
}
